fixed vh bug on mobile safari

--- a/css/fullPage.css
+++ b/css/fullPage.css
@@ -623,19 +623,20 @@ figure.effect-alec:hover p {
   .iconsHolder ul li:first-child {
     display: inline-block;
     padding-left: 0;
-    padding-top: 5vh; }
+    padding-top: 3vh; }
 
   .iconsHolder ul li:last-child {
     display: inline-block;
-    padding-right: 0;
-    padding-top: 5vh; }
+    padding-right: 0; 
+    padding-top: 3vh; }
 
   .iconsHolder ul li {
     display: block;
     width: 33.3333%;
-    height: 32.5vh;
+    height: 28vh;
     padding: 0;
     float: left;
+    padding-top: 3vh;
     box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.3); }
 
   .iconsHolder ul li h2 {
